use ScalatestPlusMockito artifact for 3.2 instead of 1.10 remove ignored uses of MaxPermSize (causing warning msg) update scala 2.12 and 2.13 patch versions (prevented compiling for me w/ /packages error)